--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,19 @@
     <dependency>
       <groupId>jakarta.transaction</groupId>
       <artifactId>jakarta.transaction-api</artifactId>
-      <version>1.3.3</version>
+      <version>2.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.enterprise</groupId>
+      <artifactId>jakarta.enterprise.cdi-api</artifactId>
+      <version>3.0.1</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.interceptor</groupId>
+      <artifactId>jakarta.interceptor-api</artifactId>
+      <version>2.0.1</version>
+      <optional>true</optional>
     </dependency>
 
     <!-- tomcat naming jars for jndi reference tests -->
@@ -117,9 +129,9 @@
 
     <!-- for testing of managed connections -->
     <dependency>
-      <groupId>org.apache.geronimo.modules</groupId>
+      <groupId>org.apache.geronimo.components</groupId>
       <artifactId>geronimo-transaction</artifactId>
-      <version>2.2.1</version>
+      <version>4.0.0</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -146,7 +158,7 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.narayana.jta</groupId>
-      <artifactId>narayana-jta</artifactId>
+      <artifactId>narayana-jta-jakarta</artifactId>
       <!-- Versions >= 5.13.0 require Java 11 -->
       <version>5.12.7.Final</version>
       <scope>test</scope>
@@ -219,7 +231,7 @@
     <commons.jacoco.complexityRatio>0.76</commons.jacoco.complexityRatio>
   </properties>
   <build>
-    <defaultGoal>clean verify apache-rat:check japicmp:cmp checkstyle:check spotbugs:check pmd:check pmd:cpd-check javadoc:javadoc</defaultGoal>
+    <defaultGoal>clean verify apache-rat:check checkstyle:check spotbugs:check pmd:check pmd:cpd-check javadoc:javadoc</defaultGoal>
     <pluginManagement>
       <plugins>
         <plugin>
@@ -330,7 +342,7 @@
             <dependency>
               <groupId>jakarta.transaction</groupId>
               <artifactId>jakarta.transaction-api</artifactId>
-              <version>1.3.1</version>
+              <version>2.0.1</version>
             </dependency>
           </dependencies>
         </configuration>
